I added the floating action button and connect it to fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdk 31
 
+
+
     defaultConfig {
         applicationId "com.example.intent"
         minSdk 26
@@ -43,9 +45,15 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    //room
     implementation "androidx.room:room-runtime:2.4.0-beta01"
     kapt "androidx.room:room-compiler:2.4.0-beta01"
     implementation "androidx.room:room-ktx:2.4.0-beta01"
+
+
+
+    //touch helper
+
+
 
 }
