--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 }
 apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 android {
     compileSdk 31
 
@@ -33,7 +34,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
 }
+
 
 dependencies {
 
@@ -49,10 +52,14 @@ dependencies {
     implementation "androidx.room:room-runtime:2.4.0-beta01"
     kapt "androidx.room:room-compiler:2.4.0-beta01"
     implementation "androidx.room:room-ktx:2.4.0-beta01"
+    //Add navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    //circle checkbox
+    implementation 'com.github.markushi:circlebutton:1.1'
 
 
 
-    //touch helper
 
 
 
